2008-01-25  Jim Keniston  <jkenisto@us.ibm.com>

	* runtime/uprobes/uprobes.c: Within a probed process, serialize
	calls to access_process_vm() when populating instructions
	slots.	Fixes an SMP bug on multithreaded apps with many
	active probepoints.
	* runtime/uprobes/uprobes.h: Ditto

2008-01-25  Frank Ch. Eigler  <fche@elastic.org>

	PR 5672.
	* staptree.cxx (probe_point copy ctor): New function.
	* staptree.h: Declare it.
	* tapsets.cxx (dwarf_derived_probe ctor): Call it to shallow-copy
	incoming base probe location before recomputing/overwriting it.

2008-01-25  David Smith  <dsmith@redhat.com>

	* configure.ac: Compressed the two perfmon options into one.
	Made other small fixes and whitespace changes.
	* configure: Regenerated.

2008-01-24  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am: Make another $(MKDIR) call visible.
	* Makefile.in: Regenerated.

2008-01-24  David Smith  <dsmith@redhat.com>

	PR 5661 (reverted).
	* configure.ac: Removed elfutils version number check.
	* configure: Regenerated.
	* acsite.m4: Removed.
	* systemtap.spec.in: Minimum elfutils version number is no longer
	filled in by configure.
	
	PR 5650 (partial).
	* configure.ac: Handles sqlite optional functionality correctly.
	If enabled/disabled by the user, do the right thing.  If not
	specified by the user, use it if present.
	* configure: Regenerated.
	* systemtap.spec.in: Always specify to configure whether to use
	sqlite or not.

2008-01-24  Dave Brolley  <brolley@redhat.com>

	PR 5017.
	* staptree.cxx (<cstring>): #include it.
	(required <indexable *>): Remove 'static' from instantiation and
	move instantiation to here from...
	* staptree.h: ...here.

2008-01-23  David Smith  <dsmith@redhat.com>

	PR 5661.
	* configure.ac: Checks elfutils version number.
	* acsite.m4: New file containing macro to return elfutils version
	number.
	* configure: Regenerated.
	* systemtap.spec.in: Minimum elfutils version number is now filled
	in by configure.
